fixed some citationsaver layout issues

--- a/public/css/styles-citation-saver.css
+++ b/public/css/styles-citation-saver.css
@@ -143,10 +143,13 @@ div.citation-saver-input-selection {
     margin-left: 5px;
     margin-right: 5px;
 }
-#citation-saver-main h4 {
+
+#citation-saver-slogan{
     display: inline;
     font-weight: 700;
-    padding-left: 10px;
+    padding-left: 6px;
+    position: relative;
+    bottom: 2px;
 }
 
 #logo-citation-saver {
@@ -212,6 +215,13 @@ section#citation-saver-modal form button {
 
 @media (max-width: 767px) {
     section#citation-saver-main {
+        margin-bottom: 50px;
         margin-top: 50px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    #citation-saver-slogan{
+        padding-left: 3px;
+        font-size: small;
     }
 }
